# trueconf-webhook-bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README-ru.md  README.md  docker-compose.yml  pyproject.toml
trueconf_webhook_bot/: __init__.py  __main__.py  bot_holder.py  config.py  filters.py  handlers.py  http_server.py  image_preview.py  models.py  permissions.py  rate_limit.py  storage.py  supervisor.py  url_guard.py  utils.py
